--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
     /* Nav Bar */
-    * {box-sizing: border-box;}
+    *{
+      box-sizing: border-box;
+    }
 
     body {
       margin: 0;
@@ -8,13 +10,13 @@
     
     .topnav {
       overflow: hidden;
-      background-color: #e9e9e9;
+      background-color: #262424;
     }
     
     .topnav a {
       float: left;
       display: block;
-      color: black;
+      color: rgb(255, 255, 255);
       text-align: center;
       padding: 14px 16px;
       text-decoration: none;
@@ -129,16 +131,51 @@
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-  }
-  
-  .flip-card-front {
-    background-color: #bbb;
-    color: black;
-  }
+  } 
   
   .flip-card-back {
-    background-color: #2980b9;
-    color: black;
+    background-color: #000000;
+    color: rgb(255, 255, 255);
     transform: rotateY(180deg);
   }
 
+  /* background image */
+  body, html {
+    height: 100%;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .bg-image {
+    /* The image used */
+    background-image: url("Blockchain\ dark\ bg\ image.jpg");
+    
+    /* Add the blur effect */
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    
+    /* Full height */
+    height: 100%; 
+    
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
+  /* Position text in the middle of the page/image */
+  .bg-text {
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    color: white;
+    font-weight: bold;
+    border: 3px solid #f1f1f1;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+    width: 80%;
+    padding: 20px;
+    text-align: center;
+  }
